compiler-core/src/type_/tests/snapshots/rakun_core__type___tests__errors__true_fn.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: let True(x) = 1
---
----- SOURCE CODE
let True(x) = 1

----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.rakun:1:5
  │
1 │ let True(x) = 1
  │     ^^^^^^^ Expected no arguments, got 1
